--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Ensures the maze is in the background */
+  z-index: 0; /* Ensures the maze is in the background */
   pointer-events: none; /* Makes the maze uninteractive */
   top: -50%;
 }
@@ -37,5 +37,9 @@
 .logo-container {
   position: absolute;
   transform: translate(-50%, -0%);
-  z-index: -1;
+  z-index: 1;
+}
+
+.auth-input-container {
+  z-index: 1;
 }
